--- a/pharma_deal_django/templates/inventory.html
+++ b/pharma_deal_django/templates/inventory.html
@@ -30,13 +30,13 @@ Owner's Page
     <div class="container" style="margin-top: 50px;">
 
       <div class="section-title">
-        <h1> Browse Products </h1>
+        <h1> Browse inventory </h1>
       </div>
 
       <br>
 
-      <h1> Browse Products </h1>
-      {% endfor %}
+      <h1> Browse inventory </h1>
+      
       <br>
       <!-- <div class="section-title">
   <a href="{%url 'login'%}">Logout</a>
