--- a/pharma_deal_django/templates/filtered_results.html
+++ b/pharma_deal_django/templates/filtered_results.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-  <h1> Search results </h1>  
+  <h1> Filter results </h1>  
   
   <a href="{%url 'login'%}">Logout</a>
   <br>
@@ -17,11 +17,12 @@
     <input type="text" name="search">
     <input type="submit" value="Enter">
   </form>
+
   <br>
   <form action="{%url 'filters'%}" method='POST' enctype="multipart/form-data">
     {% csrf_token %}
-    <label for="filter_search">Filter search results</label>
-    <select id='filter_search' name ='filter_search'>
+    <label for="filter">Filter products</label>
+    <select id='filter' name ='filter'>
       <option value="drug"> Drug</option>
       <option value="accessories"> Accessories</option>
       <option value="medical_equipment">Medical equipment</option>
@@ -29,10 +30,11 @@
     
     <input type="submit" value="Enter">
   </form>
+
   
 
-  {% if search_result%}
-   {% for search_result in search_result %}
+  {% if filtered_result %}
+   {% for search_result in filtered_result.values %}
    <div>
     <p><img src="{{search_result.product_image}}" width="70" height="70"></p>
     <p> Name: {{search_result.product_name}} </p>
@@ -49,7 +51,22 @@
   <br>
   {% endfor %}
   {%else%}
-  {{no_reslut}}
+  {% for search_result in filtered_results %}
+  <div>
+   <p><img src="{{search_result.product_image}}" width="70" height="70"></p>
+   <p> Name: {{search_result.product_name}} </p>
+   <p> Description: {{search_result.description}} </p>
+   <p>Brand: {{search_result.brand}}</p>
+   <p>Manufacturing company: {{search_result.manufacturing_company}}</p>
+   <p>Form of preparation: {{search_result.form_of_preparation}}</p>
+   <p> Category: {{search_result.category}} </p>
+   <p> Price: {{search_result.price}} </p>
+   <p> Manufacturing date: {{search_result.manufacturing_date}} </p>
+   <p> Expiry date: {{search_result.expiry_date}}</p>
+ 
+</div>
+ <br>
+ {% endfor %}
   {%endif%}
   
 
