Profile and Transaction

--- a/pharma_deal_django/templates/base.html
+++ b/pharma_deal_django/templates/base.html
@@ -48,6 +48,8 @@
                     <li><a href="{%url 'inventory'%}">Browse your inventory </a></li>
                     <li><a href="{%url 'browse'%}">Browse for Products </a></li>
                     <li><a href="{%url 'login'%}">Logout</a></li>
+                    <li><a href="{%url 'showpro'%}">profile</a></li>
+                     
                     {% block nav %}{% endblock %}
 
 
