Reviews, ratings and product's details page.
-Users can review and rate products they have purchased.
-Every product will have a details page with all the reviews for it.

--- a/pharma_deal_django/templates/browse.html
+++ b/pharma_deal_django/templates/browse.html
@@ -57,8 +57,8 @@ Homepage
         {% for product in products.values %}
         <div class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp">
           <div class="portfolio-wrap">
-
-            <div class="portfolio-info" style="height:110px;">
+            <a href="{% url 'single_product' product.product_id %}">
+            <div  class="portfolio-info" style="height:110px;">
 
               <p><img src="{{product.product_image}}" width="70" height="70"></p>
               <p> Name: {{product.product_name}} </p>
@@ -70,8 +70,22 @@ Homepage
               <p> Price: {{product.price}} </p>
               <p> Manufacturing date: {{product.manufacturing_date}} </p>
               <p> Expiry date: {{product.expiry_date}}</p>
+               <form action="{%url 'post_create'%}" method="POST">
+    {% csrf_token %} 
+    <input type="hidden" name="url" value="{{product.product_image}}">
+    <input type="hidden" name="medicine" value="{{product.product_name}}">
+    <input type="hidden" name="distributor" value="{{product.user_id}}">
+    
+    <input type="hidden" name="cost" value="{{product.price}}">
+    <input type="submit" value="Submit"> 
+
+    
+
+  </form>
+
 
             </div>
+          </a>
           </div>
         </div>
         {% endfor %}
