--- a/pharma_deal_django/templates/update.html
+++ b/pharma_deal_django/templates/update.html
@@ -1,19 +1,28 @@
-{% block content %}
-<h1> Update a Product </h1>
-<a href="{%url 'browse'%}">Browse for Products </a>
-<a href="{%url 'inventory'%}">Browse your inventory </a>
-<a href="{%url 'login'%}">Logout</a>
+{% extends 'base.html' %}
+{% load static %}
+{% block title %}
+Update
+{% endblock %}
 <br>
+<br>
+{% block content %}
+<br>
+<br>
+<br>
+<br>
+<h1 style="position: relative; text-align: center;"> Update Product </h1>
+
 <img src="{{single_product.val.product_image}}" width="100" height="100" >
 <form action="{%url 'update' single_product.val.product_id%}" method='POST' enctype="multipart/form-data">
     {% csrf_token %}
     
-    <table>{{update_form.as_table}}</table>
+    <table style="color: rgb(194, 38, 38);padding-left: 10%;">{{update_form.as_table}}</table>
     
     <br>
-    <label for='pro_image' style="font-weight: bold;">Add Image:</label>
+    <input type='hidden' name = 'owner_id' value="{{single_product.val.user_id}}">
+    <label for='pro_image' style="font-weight: bold;">Change Image:</label>
     <input type='file' name='pro_image' >
     <br>
-    <input type="submit" value="Enter">
+    <input type="submit" value="Change">
 </form>
 {% endblock %}
