--- a/pharma_deal_django/templates/browse.html
+++ b/pharma_deal_django/templates/browse.html
@@ -75,9 +75,10 @@ Homepage
     <input type="hidden" name="url" value="{{product.product_image}}">
     <input type="hidden" name="medicine" value="{{product.product_name}}">
     <input type="hidden" name="distributor" value="{{product.user_id}}">
+    <input type="hidden" name="product_id" value="{{product.product_id}}">
     
     <input type="hidden" name="cost" value="{{product.price}}">
-    <input type="submit" value="Submit"> 
+    <input type="submit" value="Submit" > 
 
     
 
