--- a/pharma_deal_django/templates/rate_and_review.html
+++ b/pharma_deal_django/templates/rate_and_review.html
@@ -1,8 +1,11 @@
+name:{{product_name}}
+price:{{cost}}
 <form action="{%url 'review_and_rate'%}" method='POST'>
     {% csrf_token %}
-    <input type="hidden" name="pharam_id" value="{{pharam_id}}">
+    <input type="hidden" name="pharma_id" value="{{pharma_id}}">
     <input type="hidden" name="transaction_status" value="{{status}}">
     <input type="hidden" name="product_id" value="{{product_id}}">
+    
     <input type="text" name="review_and_rate">
 
     <input type='radio' id='rate_1' name='rating' value="1">
