transaction and name

--- a/pharma_deal_django/templates/cart_check.htm
+++ b/pharma_deal_django/templates/cart_check.htm
@@ -11,7 +11,7 @@
 
 
     Welcome {{e}}
-    <br> {% for time,date,me,co,img,stat in comb_lis %} Date : {{date}} &nbsp; Cart :
+    <br> {% for time,date,ph,me,co,img,stat,did in comb_lis %} Date : {{date}} &nbsp; Cart :
     <br>
     <br> Medicine : {{me}}
     <br> Cost : {{co}}
