--- a/pharma_deal_django/templates/post_check.htm
+++ b/pharma_deal_django/templates/post_check.htm
@@ -16,6 +16,7 @@
     <br> Pharmacy : {{ph}}
     <br> Medicine : {{me}}
     <br> Cost : {{co}}
+    <br> li : {{lis_time}}
     <br> Image :
     <br>
     <img src="{{img}}" width="10%" height="10%">
