--- a/pharma_deal_django/templates/base.html
+++ b/pharma_deal_django/templates/base.html
@@ -2,119 +2,78 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-
-    <title>{% block title %}{% endblock %}</title>
-
-
-    <link rel="stylesheet" type="text/css" href="{%static 'css/style.css'%}">
-    <link rel="stylesheet" type="text/css" href="{%static 'vendor/bootstrap/css/bootstrap.min.css'%}">
-    <link rel="stylesheet" type="text/css" href="{%static 'vendor/icofont/icofont.min.css'%}">
-    <link rel="stylesheet" type="text/css" href="{%static 'vendor/boxicons/css/boxicons.min.css'%}">
-    <link rel="stylesheet" type="text/css" href="{%static 'vendor/venobox/venobox.css'%}">
-    <!-- <link rel="stylesheet" type="text/css" href="{%static 'vendor/owl.carousel/assets/owl.carousel.min.css'%}"> -->
-    <link rel="stylesheet"
-        href="{%static 'vendor/fontawesome-free-5.12.0-web/fontawesome-free-5.12.0-web/css/fontawesome.min.css'%}">
-    <link rel="stylesheet" href="{%static 'vendor/font-awesome-4.7.0/css/font-awesome.min.css'%}">
-
-
-
-
-
-
-    {% block extra %}{% endblock %}
-
-
-
-</head>
+    <head>
+        <title>{% block title %}{% endblock %}</title>
+        <link rel="stylesheet" type="text/css" href="{%static 'css/style.css'%}">
+        <link rel="stylesheet" type="text/css" href="{%static 'vendor/bootstrap/css/bootstrap.min.css'%}">
+        <link rel="stylesheet" type="text/css" href="{%static 'vendor/icofont/icofont.min.css'%}">
+        <link rel="stylesheet" type="text/css" href="{%static 'vendor/boxicons/css/boxicons.min.css'%}">
+        <link rel="stylesheet" type="text/css" href="{%static 'vendor/venobox/venobox.css'%}">
+        <!-- <link rel="stylesheet" type="text/css" href="{%static 'vendor/owl.carousel/assets/owl.carousel.min.css'%}"> -->
+        <link rel="stylesheet" href="{%static 'vendor/fontawesome-free-5.12.0-web/fontawesome-free-5.12.0-web/css/fontawesome.min.css'%}">
+        <link rel="stylesheet" href="{%static 'vendor/font-awesome-4.7.0/css/font-awesome.min.css'%}">
+        {% block extra %}{% endblock %}
+    </head>
 <!--  heading jumbotron -->
-
-<body>
-
+    <body>
     <!-- ======= Header ======= -->
-    <header id="header" class="fixed-top d-flex align-items-center">
-        <div class="container d-flex align-items-center">
-
-            <div class="logo mr-auto">
-                <h1><a href="#">Pharma Deal</a></h1>
-                <!-- Uncomment below if you prefer to use an image logo -->
-                <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+        <header id="header" class="fixed-top d-flex align-items-center">
+            <div class="container d-flex align-items-center">
+                <div class="logo mr-auto">
+                    <h1><a href="#">Pharma Deal</a></h1>
+                    <!-- Uncomment below if you prefer to use an image logo -->
+                    <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+                </div>
+                <nav class="nav-menu d-none d-lg-block topndav" id="mydTopnav">
+                    <ul>
+                        {% comment %} </li>
+                        <li><a href="{%url 'inventory'%}">Inventory</a></li>
+                        <li><a href="{%url 'browse'%}">Products</a></li>
+                        <li><a href="{%url 'showpro'%}">Profile  <i class="fa fa-user" aria-hidden="true"></i></a></li>
+                        <li><a href="{%url 'login'%}">Logout  <i class="fa fa-sign-out" aria-hidden="true"></i></a></li> {% endcomment %}
+                        {% block nav %}{% endblock %}
+                    </ul>
+                </nav><!-- .nav-menu -->
             </div>
-
-            <nav class="nav-menu d-none d-lg-block topndav" id="mydTopnav">
-                <ul>
-
-                    </li>
-                    <li><a href="{%url 'inventory'%}">Browse your inventory </a></li>
-                    <li><a href="{%url 'browse'%}">Browse for Products </a></li>
-                    <li><a href="{%url 'login'%}">Logout</a></li>
-                    <li><a href="{%url 'showpro'%}">profile</a></li>
-                     
-                    {% block nav %}{% endblock %}
-
-
-                </ul>
-            </nav><!-- .nav-menu -->
-
-
-
+        </header><!-- End Header -->
+        <div class="wrapper">
+            {% block content %}
+            {% endblock %}
         </div>
-    </header><!-- End Header -->
-
-
-
-
-
-    <div class="wrapper">
-        {% block content %}
-        {% endblock %}
-    </div>
-
-    <!-- ======= Footer ======= -->
-    <footer id="footer" class="section-bg">
-
-        <div class="footer-top">
-            <div class="container">
-                <div class="row">
-
-                    <div class="col-lg-3 col-md-6 footer-contact">
-                        <h3>Pharma Deal</h3>
-                        <p>
-                            In Front of St. Urael Church, AB zone trading 6th floor <br>
-                            Addis Abeba<br>
-                            Ethiopia <br><br>
-                            <strong>Phone:</strong> 0956908251<br>
-                            <strong>Email:</strong> byttechnology5@gmail.com<br>
-                        </p>
-                    </div>
-
-                    <div class="col-lg-2 col-md-6 footer-links">
-                        <h4>Useful Links</h4>
-                        <ul>
-                            <li><i class="bx bx-chevron-right"></i> <a href="#">
-                                    Browse your inventory</a></li>
-                            <li><i class="bx bx-chevron-right"></i> <a href="#">Browse for Products</a></li>
-                            <li><i class="bx bx-chevron-right"></i> <a href="#">Logout</a></li>
-
+        <!-- ======= Footer ======= -->
+        <footer id="footer" class="section-bg">
+            <div class="footer-top">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-3 col-md-6 footer-contact">
+                            <h3>Pharma Deal</h3>
+                            <p>
+                                In Front of St. Urael Church, AB zone trading 6th floor <br>
+                                Addis Abeba<br>
+                                Ethiopia <br><br>
+                                <strong>Phone:</strong> 0956908251<br>
+                                <strong>Email:</strong> byttechnology5@gmail.com<br>
+                            </p>
+                        </div>
+                        <div class="col-lg-2 col-md-6 footer-links">
+                            <h4>Useful Links</h4>
+                            <ul>
+                                <li><i class="bx bx-chevron-right"></i> <a href="#">Browse your inventory</a></li>
+                                <li><i class="bx bx-chevron-right"></i> <a href="#">Browse for Products</a></li>
+                                <li><i class="bx bx-chevron-right"></i> <a href="#">Logout</a></li>
                             <!-- <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li> -->
-                        </ul>
+                            </ul>
+                        </div>
+                        <div class="col-lg-3 col-md-6 footer-links">
+                            <h4>Our Services</h4>
+                        </div>
+                        <!--      -->
                     </div>
-
-                    <div class="col-lg-3 col-md-6 footer-links">
-                        <h4>Our Services</h4>
-
-                    </div>
-
-                    <!--      -->
-
                 </div>
             </div>
-        </div>
-
-        <div class="container d-md-flex py-4">
-
-            <div class="mr-md-auto text-center text-md-left">
-                <div class="copyright">
+            <div class="container d-md-flex py-4">
+                <div class="mr-md-auto text-center text-md-left">
+                    <div class="copyright">
                     &copy; Copyright <strong><span>Pharma Deal</span></strong>. All Rights Reserved
                 </div>
                 <div class="credits">
@@ -132,26 +91,22 @@
                 <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
                 <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
             </div>
-        </div>
-    </footer><!-- End Footer -->
+        </footer>
+        <!-- End Footer -->
 
-    <script src="{%static 'vendor/jquery/jquery.min.js'%}"></script>
-    <script src="{%static 'vendor/bootstrap/js/bootstrap.bundle.min.js'%}"></script>
-    <script src="{%static 'vendor/jquery.easing/jquery.easing.min.js'%}"></script>
-    <script src="{%static 'vendor/php-email-form/validate.js'%}"></script>
-    <script src="{%static 'vendor/waypoints/jquery.waypoints.min.js'%}"></script>
-    <script src="{%static 'vendor/counterup/counterup.min.js'%}"></script>
-    <script src="{%static 'vendor/isotope-layout/isotope.pkgd.min.js'%}"></script>
-    <script src="{%static 'vendor/venobox/venobox.min.js'%}"></script>
-    <script src="{%static 'vendor/owl.carousel/owl.carousel.min.js'%}"></script>
+        <script src="{%static 'vendor/jquery/jquery.min.js'%}"></script>
+        <script src="{%static 'vendor/bootstrap/js/bootstrap.bundle.min.js'%}"></script>
+        <script src="{%static 'vendor/jquery.easing/jquery.easing.min.js'%}"></script>
+        <script src="{%static 'vendor/php-email-form/validate.js'%}"></script>
+        <script src="{%static 'vendor/waypoints/jquery.waypoints.min.js'%}"></script>
+        <script src="{%static 'vendor/counterup/counterup.min.js'%}"></script>
+        <script src="{%static 'vendor/isotope-layout/isotope.pkgd.min.js'%}"></script>
+        <script src="{%static 'vendor/venobox/venobox.min.js'%}"></script>
+        <script src="{%static 'vendor/owl.carousel/owl.carousel.min.js'%}"></script>
+        <!-- Template Main JS File -->
+        <script src="{%static 'assets/js/main.js'%}"></script>
 
+    </body>
+    <script src="{%static 'js/bootstrap.bundle.min.js'%}"></script>
     <!-- Template Main JS File -->
-    <script src="{%static 'assets/js/main.js'%}"></script>
-
-</body>
-<script src="{%static 'js/bootstrap.bundle.min.js'%}"></script>
-
-
-<!-- Template Main JS File -->
-
 </html>
