--- a/pharma_deal_django/templates/browse.html
+++ b/pharma_deal_django/templates/browse.html
@@ -1,103 +1,70 @@
 {% extends 'base.html' %}
 <!-- {% load static %} -->
-{% block title %}
-Homepage
-{% endblock %}
+  {% block title %}
+    Homepage
+  {% endblock %}
 
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-{%block content%}
-
-<body>
-
-
-
-  <main id="main">
-
-    <!-- ======= Breadcrumbs ======= -->
-
-
-  </main><!-- End #main -->
-
-  <section id="portfolio" class="portfolio">
-    <div class="container" style="margin-top: 50px;">
-
-      <div class="section-title">
-        <h1> Browse Products </h1>
-      </div>
-
-      <br>
-       <form action="{%url 'search'%}" method='POST' enctype="multipart/form-data">
-    {% csrf_token %}
-    <label for="search">Search</label>
-    <input type="text" name="search">
-    <input type="submit" value="Enter">
-  </form>
-  <br>
-  <form action="{%url 'filters'%}" method='POST' enctype="multipart/form-data">
-    {% csrf_token %}
-    <label for="filter">Filter products</label>
-    <select id='filter' name ='filter'>
-      <option value="drug"> Drug</option>
-      <option value="accessories"> Accessories</option>
-      <option value="medical_equipment">Medical equipment</option>
-    </select>
-    
-    <input type="submit" value="Enter">
-  </form>
-
-      <div class="row portfolio-container">
-        {% for product in products.values %}
-        <div class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp">
-          <div class="portfolio-wrap">
-            <a href="{% url 'single_product' product.product_id %}">
-            <div  class="portfolio-info" style="height:110px;">
-
-              <p><img src="{{product.product_image}}" width="70" height="70"></p>
-              <p> Name: {{product.product_name}} </p>
-              <p>Description: {{product.description}} </p>
-              <p>Brand: {{product.brand}}</p>
-              <p>Manufacturing company: {{product.manufacturing_company}}</p>
-              <p>Form of preparation: {{product.form_of_preparation}}</p>
-              <p> Category: {{product.category}} </p>
-              <p> Price: {{product.price}} </p>
-              <p> Manufacturing date: {{product.manufacturing_date}} </p>
-              <p> Expiry date: {{product.expiry_date}}</p>
-               <form action="{%url 'post_create'%}" method="POST">
-    {% csrf_token %} 
-    <input type="hidden" name="url" value="{{product.product_image}}">
-    <input type="hidden" name="medicine" value="{{product.product_name}}">
-    <input type="hidden" name="distributor" value="{{product.user_id}}">
-    <input type="hidden" name="product_id" value="{{product.product_id}}">
-    
-    <input type="hidden" name="cost" value="{{product.price}}">
-    <input type="submit" value="Submit" > 
-
-    
-
-  </form>
-
-
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+  </head>
+  {%block content%}
+    <section id="portfolio" class="portfolio">
+      <div class="container" style="margin-top: 50px;">
+        <br>
+        <form action="{%url 'search'%}" method='POST' enctype="multipart/form-data">
+          {% csrf_token %}
+          <label for="search">Search</label>
+          <input type="text" name="search">
+          <input type="submit" value="Enter">
+        </form>
+        <br>
+        <form action="{%url 'filters'%}" method='POST' enctype="multipart/form-data">
+          {% csrf_token %}
+          <label for="filter">Filter products</label>
+          <select id='filter' name ='filter'>
+            <option value="drug"> Drug</option>
+            <option value="accessories"> Accessories</option>
+            <option value="medical_equipment">Medical equipment</option>
+          </select>
+          <input type="submit" value="Enter">
+        </form>
+        <div class="row portfolio-container">
+          {% for product in products.values %}
+            <div class="col-lg-4 col-md-6 filter-app wow fadeInUp">
+              <div class="card my-2 mx-2" style="box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2)">
+                <a href="{% url 'single_product' product.product_id %}">
+                  <img "card-img-top" src="{{product.product_image}}" style="height:200px;">
+                </a>
+                <div class="card-body">
+                  <p>Name: {{product.product_name}} </p>
+                  <p>Description: {{product.description}} </p>
+                  <p>Brand: {{product.brand}}</p>
+                  <p>Manufacturing company: {{product.manufacturing_company}}</p>
+                  <p>Form of preparation: {{product.form_of_preparation}}</p>
+                  <p>Category: {{product.category}} </p>
+                  <p>Price: {{product.price}} </p>
+                  <p>Manufacturing date: {{product.manufacturing_date}} </p>
+                  <p>Expiry date: {{product.expiry_date}}</p>
+                  <button class="btn btn-primary" form="Addtocart" type="submit"><i class="fa fa-cart-plus" aria-hidden="true"></i>  Add to cart</button>
+                  <form action="{%url 'post_create'%}" method="POST" id="Addtocart">
+                    {% csrf_token %} 
+                    <input type="hidden" name="url" value="{{product.product_image}}">
+                    <input type="hidden" name="medicine" value="{{product.product_name}}">
+                    <input type="hidden" name="distributor" value="{{product.user_id}}">
+                    <input type="hidden" name="product_id" value="{{product.product_id}}">      
+                    <input type="hidden" name="cost" value="{{product.price}}">
+                  </form>
+                </div>        
+              </div>
             </div>
-          </a>
-          </div>
+          {% endfor %}
         </div>
-        {% endfor %}
       </div>
-
-    </div>
-  </section><!-- End Portfolio Section -->
-
-
-
-
+    </section><!-- End Portfolio Section -->
   {%endblock%}
-
 </html>
