--- a/pharma_deal_django/templates/cart_check.htm
+++ b/pharma_deal_django/templates/cart_check.htm
@@ -1,58 +1,49 @@
-<!DOCTYPE html>
-<html>
-
-<body>
-
-    <head>
-
-
-    </head>
-
-
-
-
-
-    Welcome {{e}}
-    <br> {% for time,date,me,co,img,stat,did,ph,pid in comb_lis %} Date : {{date}} &nbsp; Cart :
-    <br>
-    <div id="contents">
-        <br> Medicine : {{me}}
-        <br> Cost : {{co}}
-        <br> Image :
-        <br>
-        <img src="{{img}}" width="10%" height="10%">
+{%extends 'base.html'%}
+{%block title%}
+    Cart
+{%endblock%}
+{%block content%}
+    <body>
         <br>
         <br>
-        <p id="status">Status : {{stat}}</p>
         <br>
-
-    </div>
-    {%if stat == 'accepted' %}
-    <form id="review_button" action="{%url 'review_and_rate'%}" method="POST">
-        {% csrf_token %}
-
-        <input type="hidden" name="transaction_status" value="{{stat}}">
-        <input type="hidden" name="pharma_id" value="{{ph}}">
-        <input type="hidden" name="product_id" value="{{pid}}">
-        <input type="hidden" name="owner_name" value="{{stat}}">
-        <input type="hidden" name="product_name" value="{{me}}">
-        <input type="hidden" name="cost" value="{{co}}">
-
-
-
-
-        <input type="submit" value="Review">
-
-
-
-    </form>
-    {%endif%}
-
-    <br>{% endfor %}
-
-
-
-
-</body>
-
-</html>
+        <div class="container-xl my-3">
+            <div class="container p-3 my-3">
+                <h1 class="h1">
+                    Welcome {{e}}
+                </h1>
+            </div>
+            <br> 
+            <div class="row portfolio-container">
+                {% for time,date,me,co,img,stat,did,ph,pid in comb_lis %}
+                    <div class="col-lg-4 col-md-6 filter-app wow fadeInUp">
+                        <div class="card my-2" style="box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2)">
+                            <img class="card-img-top" src="{{img}}" style="height: 200px;">
+                            <div class="card-body">                       
+                                <div id="contents">
+                                    <p>Medicine : {{me}}</p>
+                                    <p>Cost : {{co}}</p>
+                                    <p id="status">Status : {{stat}}</p>    
+                                </div>
+                                {%if stat == 'accepted' %}
+                                <button class="btn btn-outline-info" type="submit" form="review_button"><i class="fa fa-star-o" aria-hidden="true"></i>  Review</button>
+                                <form id="review_button" action="{%url 'review_and_rate'%}" method="POST">
+                                    {% csrf_token %}   
+                                    <input type="hidden" name="transaction_status" value="{{stat}}">
+                                    <input type="hidden" name="pharma_id" value="{{ph}}">
+                                    <input type="hidden" name="product_id" value="{{pid}}">
+                                    <input type="hidden" name="owner_name" value="{{stat}}">
+                                    <input type="hidden" name="product_name" value="{{me}}">
+                                    <input type="hidden" name="cost" value="{{co}}">
+                                </form>
+                                {%endif%}
+                                <p>Date : {{date}} &nbsp;</p>     
+                                <br>
+                            </div>
+                        </div>
+                    </div> 
+                {% endfor %}
+            </div>
+        </div>
+    </body>
+{%endblock%}
