--- a/pharma_deal_django/templates/inventory.html
+++ b/pharma_deal_django/templates/inventory.html
@@ -1,85 +1,56 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block title %}
-Owner's Page
-{% endblock %}
-<br>
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-{% block content %}
-
-<body>
-
-
-
-  <main id="main">
-
-    <!-- ======= Breadcrumbs ======= -->
-
-
-  </main><!-- End #main -->
-
-  <section id="portfolio" class="portfolio">
-    <div class="container" style="margin-top: 50px;">
-
-      <div class="section-title">
-        <h1> Browse inventory </h1>
-      </div>
-
-      <br>
-
-      <h1> Browse inventory </h1>
-      
-      <br>
-      <!-- <div class="section-title">
-  <a href="{%url 'login'%}">Logout</a>
-  <a href="{%url 'create'%}">Create Products </a>
-  <a href="{%url 'browse'%}">Browse for Products </a>
-  <a href="{%url 'login'%}">Logout</a>
-</div> -->
-      <!-- <br> -->
-
-      <div class="row portfolio-container">
-        {% for product in user_inventory.values %}
-        <div class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp">
-          <div class="portfolio-wrap">
-            <div class="portfolio-info">
-              <p><img src="{{product.product_image}}" width="70" height="70"></p>
-              <p> Name: {{product.product_name}} </p>
-              <p> Description: {{product.description}} </p>
-              <p>Brand: {{product.brand}}</p>
-              <p>Manufacturing company: {{product.manufacturing_company}}</p>
-              <p>Form of preparation: {{product.form_of_preparation}}</p>
-              <p> Category: {{product.category}} </p>
-              <p> Price: {{product.price}} </p>
-              <p> Manufacturing date: {{product.manufacturing_date}} </p>
-              <p> Expiry date: {{product.expiry_date}}</p>
-              <form action="{% url 'update' product.product_id %}" method="POST" enctype="multipart/form-data">
-                {% csrf_token %}
-                <input type='hidden' name = 'owner_id' value="{{product.user_id}}">
-                <input type="submit" name = 'submit' value="Update">
-              </form>
-              <form action="{% url 'delete' product.product_id %}" method="POST" enctype="multipart/form-data">
-                {% csrf_token %}
-                <input type='hidden' name = 'owner_id' value="{{product.user_id}}">
-                <input type="submit" name = 'submit' value="Delete">
-              </form>
-              <!--<a href="{% url 'update' product.product_id %}"><button type="button">Update</button></a> <a
-                href="{% url 'delete' product.product_id %}"><button type="button">Delete</button></a> <a><button
-                  type="button">Review</button></a>-->
-
-            </div>
-          </div>
+  {% block title %}
+    Owner's Page
+  {% endblock %}
+  {% block content %}
+    <section id="portfolio" class="portfolio">
+      <div class="container" style="margin-top: 50px;">
+        <div class="section-title">
+          <h1> <i class="fa fa-plus-square" aria-hidden="true">  Inventory</i>  </h1>
         </div>
+        <br> 
+        <br>
+        <!-- <div class="section-title">
+          <a href="{%url 'login'%}">Logout</a>
+          <a href="{%url 'create'%}">Create Products </a>
+          <a href="{%url 'browse'%}">Browse for Products </a>
+          <a href="{%url 'login'%}">Logout</a>
+        </div> -->
+        <!-- <br> -->
 
-        {% endfor %}
-        {%endblock%}
-
+        <div class="row portfolio-container">
+          {% for product in user_inventory.values %}
+            <div class="col-lg-4 col-md-6  filter-app wow fadeInUp">
+              <div class=" card my-2" style="box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2)">
+                <img class="card-img-top" src="{{product.product_image}}" style="height:200px;" >
+                <div class="card-body"> 
+                  <p>Name: {{product.product_name}} </p>
+                  <p>Description: {{product.description}} </p>
+                  <p>Brand: {{product.brand}}</p>
+                  <p>Manufacturing company: {{product.manufacturing_company}}</p>
+                  <p>Form of preparation: {{product.form_of_preparation}}</p>
+                  <p> Category: {{product.category}} </p>
+                  <p> Price: {{product.price}} </p>
+                  <p> Manufacturing date: {{product.manufacturing_date}} </p>
+                  <p> Expiry date: {{product.expiry_date}}</p>
+                  <button class="btn btn-outline-primary" type="submit" form = "update_form"><i class="fa fa-wrench" aria-hidden="true"></i> Update</button>
+                  <button class="btn btn-outline-danger" type="submit" form = "delete_form"><i class="fa fa-trash-o" aria-hidden="true"></i> Delete</button>
+                  <form action="{% url 'update' product.product_id %}" method="POST" enctype="multipart/form-data" id="update_form">
+                    {% csrf_token %}
+                    <input type='hidden' name = 'owner_id' value="{{product.user_id}}">
+                  </form>
+                  <form action="{% url 'delete' product.product_id %}" method="POST" enctype="multipart/form-data" id="delete_form">
+                    {% csrf_token %} 
+                    <input type='hidden' name = 'owner_id' value="{{product.user_id}}">
+                  </form> 
+                  <!--<a href="{% url 'update' product.product_id %}"><button type="button">Update</button></a> <a
+                    href="{% url 'delete' product.product_id %}"><button type="button">Delete</button></a> <a><button type="button">Review</button></a>-->
+                </div>
+              </div>
+            </div>
+          {% endfor %}
+        </div>
       </div>
+    </section>
+  {%endblock%}
