--- a/pharma_deal_django/templates/single_product.html
+++ b/pharma_deal_django/templates/single_product.html
@@ -1,17 +1,37 @@
-              <p><img src="{{product.product_image}}" width="70" height="70"></p>
-              <p> Name: {{product.product_name}} </p>
-              <p>Description: {{product.description}} </p>
-              <p>Brand: {{product.brand}}</p>
-              <p>Manufacturing company: {{product.manufacturing_company}}</p>
-              <p>Form of preparation: {{product.form_of_preparation}}</p>
-              <p> Category: {{product.category}} </p>
-              <p> Price: {{product.price}} </p>
-              <p> Manufacturing date: {{product.manufacturing_date}} </p>
-              <p> Expiry date: {{product.expiry_date}}</p>
-              <br>
-              <h2>Reviews</h2>
-              <br>
-              {% for review in reviews.values %}
-              <p> Rating: {{review.user_rating}}</p>
-              <p> Review: {{review.user_review}}</p>
-              {%endfor%}
+{%extends "base.html"%}
+
+{%block content%}
+    <br>
+    <br>
+    <br>
+    <div class="row portfolio-container">
+        <div class="col-lg-6 col-md-8 mx-auto filter-app wow fadeInUp">
+            <div class=" card my-2" style="box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2)">
+                <img class="card-img-top" src="{{product.product_image}}" style="height:200px;" >
+                <div class="card-body"> 
+                    <p>Name: {{product.product_name}} </p>
+                    <p>Description: {{product.description}} </p>
+                    <p>Brand: {{product.brand}}</p>
+                    <p>Manufacturing company: {{product.manufacturing_company}}</p>
+                    <p>Form of preparation: {{product.form_of_preparation}}</p>
+                    <p>Category: {{product.category}} </p>
+                    <p>Price: {{product.price}} </p>
+                    <p>Manufacturing date: {{product.manufacturing_date}} </p>
+                    <p>Expiry date: {{product.expiry_date}}</p>
+                    <br>
+                </div>
+            </div>
+            <br>
+            <h2 class="h2 mx-auto">Reviews</h2>
+            <br>
+            {% for review in reviews.values %}
+            <div class="card my-2" style="box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2)">
+                <div class="card-body">
+                    <p> Rating: {{review.user_rating}}</p>
+                    <p> Review: {{review.user_review}}</p>
+                </div>
+            </div>
+            {%endfor%}
+        </div>
+    </div>              
+{%endblock%}
