--- a/pharma_deal_django/static/css/style.css
+++ b/pharma_deal_django/static/css/style.css
@@ -11,7 +11,9 @@
 body {
   font-family: "Open Sans", sans-serif;
   color: #444444;
+  background-color: #18d26e;
 }
+
 
 a {
   color: #3498db;
@@ -63,7 +65,7 @@ h1, h2, h3, h4, h5, h6 {
   transition: all 0.5s;
   z-index: 997;
   transition: all 0.5s;
-  background: #fff;
+  background: #131921;
   box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
 }
 
@@ -77,7 +79,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #header .logo h1 a, #header .logo h1 a:hover {
-  color: #384046;
+  color: #e7ecf0;
   text-decoration: none;
 }
 
@@ -117,12 +119,15 @@ h1, h2, h3, h4, h5, h6 {
   margin: 0;
   padding: 0;
   list-style: none;
+  color: white;
+  
 }
 
 .nav-menu > ul > li {
   position: relative;
   white-space: nowrap;
   float: left;
+  color: white;
 }
 
 .nav-menu a {
@@ -689,6 +694,8 @@ section {
 --------------------------------------------------------------*/
 .portfolio {
   padding: 60px 0;
+  background-image: linear-gradient(60deg,rgb(198, 223, 211), rgb(248, 248, 248));
+  backdrop-filter: blur(5px);
 }
 
 .portfolio #portfolio-flters {
@@ -832,6 +839,15 @@ section {
   font-weight: 500;
   font-size: 14px;
   text-transform: uppercase;
+}
+.portfolio #search_bar{
+  position: relative;
+  
+}
+.portfolio #filter_bar{
+  position: relative;
+  left: 450px;
+  bottom: 45px;
 }
 
 /*--------------------------------------------------------------
@@ -1255,12 +1271,13 @@ section {
 #footer {
   color: #444444;
   font-size: 14px;
-  background: #f7fbfe;
+  background: #131921;
+  color: white;
 }
 
 #footer .footer-top {
   padding: 60px 0 30px 0;
-  background: #fff;
+  background: #131921;
 }
 
 #footer .footer-top .footer-contact {
@@ -1286,7 +1303,7 @@ section {
 #footer .footer-top h4 {
   font-size: 16px;
   font-weight: bold;
-  color: #444444;
+  color: white;
   position: relative;
   padding-bottom: 12px;
 }
