--- a/pharma_deal_django/templates/base.html
+++ b/pharma_deal_django/templates/base.html
@@ -25,12 +25,12 @@
                     <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
                 </div>
                 <nav class="nav-menu d-none d-lg-block topndav" id="mydTopnav">
-                    <ul>
-                        {% comment %} </li>
-                        <li><a href="{%url 'inventory'%}">Inventory</a></li>
-                        <li><a href="{%url 'browse'%}">Products</a></li>
-                        <li><a href="{%url 'showpro'%}">Profile  <i class="fa fa-user" aria-hidden="true"></i></a></li>
-                        <li><a href="{%url 'login'%}">Logout  <i class="fa fa-sign-out" aria-hidden="true"></i></a></li> {% endcomment %}
+                    <ul style="color: white;">
+                         </li>
+                        <li><a href="{%url 'inventory'%}" style="color: white;">Inventory</a></li>
+                        <li><a href="{%url 'browse'%}" style="color: white;">Products</a></li>
+                        <li><a href="{%url 'showpro'%}" style="color: white;">Profile  <i class="fa fa-user" aria-hidden="true"></i></a></li>
+                        <li><a href="{%url 'login'%}" style="color: white;">Logout  <i class="fa fa-sign-out" aria-hidden="true"></i></a></li> 
                         {% block nav %}{% endblock %}
                     </ul>
                 </nav><!-- .nav-menu -->
