--- a/pharma_deal_django/templates/browse.html
+++ b/pharma_deal_django/templates/browse.html
@@ -16,14 +16,15 @@
     <section id="portfolio" class="portfolio">
       <div class="container" style="margin-top: 50px;">
         <br>
-        <form action="{%url 'search'%}" method='POST' enctype="multipart/form-data">
-          {% csrf_token %}
-          <label for="search">Search</label>
-          <input type="text" name="search">
-          <input type="submit" value="Enter">
-        </form>
+      <div id='search_bar'><form action="{%url 'search'%}" method='POST' enctype="multipart/form-data">
+        {% csrf_token %}
+        <label for="search">Search</label>
+        <input type="text" name="search">
+        <input type="submit" value="Enter">
+      </form></div>
+        
         <br>
-        <form action="{%url 'filters'%}" method='POST' enctype="multipart/form-data">
+        <div id='filter_bar'><form action="{%url 'filters'%}" method='POST' enctype="multipart/form-data">
           {% csrf_token %}
           <label for="filter">Filter products</label>
           <select id='filter' name ='filter'>
@@ -32,7 +33,8 @@
             <option value="medical_equipment">Medical equipment</option>
           </select>
           <input type="submit" value="Enter">
-        </form>
+        </form></div>
+        
         <div class="row portfolio-container">
           {% for product in products.values %}
             <div class="col-lg-4 col-md-6 filter-app wow fadeInUp">
