--- a/pharma_deal_django/templates/post_check.htm
+++ b/pharma_deal_django/templates/post_check.htm
@@ -6,7 +6,7 @@
             <div class="container-xl border p-3 my-3">
                 <div class="container p-3 my-3">
                     <h1 class="h1">
-                        Welcome {{e}}
+                        Requests {{e}}
                     </h1>
                 </div>
                 <br> 
@@ -17,9 +17,10 @@
                             <img class = "card-img-top" src="{{img}}" style="height: 200px;">
                             <div class="card-body">
                                 <p class="card-text">Medicine : {{me}}</p>
-                                <p class="card-text">Request :</p> 
+                                
                                 <p class="card-text">Pharmacy : {{ph}} </p>
                                 <p class="card-text">Cost : {{co}}</p>
+                                <p class="card-text">Request made at : {{date}} &nbsp;</p>
                                 <button class="btn btn-outline-primary" type="submit" form="accept"><i class="fa fa-check" aria-hidden="true"></i>Accept</button>
                                 <button class="btn btn-outline-danger" type="submit" form="decline"><i class="fa fa-minus-square" aria-hidden="true"></i>Decline</button>
                                 <form action="{%url 'accept'%}" method="POST" id="accept">
@@ -30,7 +31,7 @@
                                     {% csrf_token %}
                                     <input type="hidden" name="lis_time" value="{{lis_time}}">
                                 </form>
-                                <p class="card-text">Request made at : {{date}} &nbsp;</p>         
+                                         
                             </div>
                         </div>
                     </div>
