--- a/pharma_deal_django/templates/search_result.html
+++ b/pharma_deal_django/templates/search_result.html
@@ -1,5 +1,12 @@
-<!DOCTYPE html>
+{%extends 'base.html'%}
+{%block title%}
+   Serach Results
+{%endblock%}
+{%block content%}
+
 <html lang="en">
+<br>
+<br>
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,10 +14,7 @@
     <title>Document</title>
 </head>
 <body>
-  <h1> Search results </h1>  
-  
-  <a href="{%url 'login'%}">Logout</a>
-  <br>
+   <br>
   <form action="{%url 'search'%}" method='POST' enctype="multipart/form-data">
     {% csrf_token %}
     <label for="search">Search</label>
@@ -33,8 +37,11 @@
 
   {% if search_result%}
    {% for search_result in search_result %}
-   <div>
-    <p><img src="{{search_result.product_image}}" width="70" height="70"></p>
+   <div class="col-lg-4 col-md-6 filter-app wow fadeInUp">
+    <div class="card my-2" style="box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2) ">
+    <p><img class="card-img-top" src="{{search_result.product_image}}" style="height: 200px; width:200px;"></p>
+    <div class="card-body" > 
+    <div id="contents">
     <p> Name: {{search_result.product_name}} </p>
     <p> Description: {{search_result.description}} </p>
     <p>Brand: {{search_result.brand}}</p>
@@ -44,7 +51,10 @@
     <p> Price: {{search_result.price}} </p>
     <p> Manufacturing date: {{search_result.manufacturing_date}} </p>
     <p> Expiry date: {{search_result.expiry_date}}</p>
+    </div>
+    </div>
   
+</div>
 </div>
   <br>
   {% endfor %}
@@ -57,3 +67,4 @@
   
 </body>
 </html>
+{%endblock%}
