--- a/pharma_deal_django/templates/search_result.html
+++ b/pharma_deal_django/templates/search_result.html
@@ -5,8 +5,7 @@
 {%block content%}
 
 <html lang="en">
-<br>
-<br>
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,6 +13,8 @@
     <title>Document</title>
 </head>
 <body>
+ <section id="portfolio" class="portfolio">
+    <div class="container" style="margin-top: 50px;">
    <br>
   <form action="{%url 'search'%}" method='POST' enctype="multipart/form-data">
     {% csrf_token %}
@@ -21,7 +22,9 @@
     <input type="text" name="search">
     <input type="submit" value="Enter">
   </form>
+  </div>
   <br>
+  
   <form action="{%url 'filters'%}" method='POST' enctype="multipart/form-data">
     {% csrf_token %}
     <label for="filter_search">Filter search results</label>
@@ -30,8 +33,8 @@
       <option value="accessories"> Accessories</option>
       <option value="medical_equipment">Medical equipment</option>
     </select>
-    
     <input type="submit" value="Enter">
+
   </form>
   
 
