--- a/pharma_deal_django/templates/filtered_results.html
+++ b/pharma_deal_django/templates/filtered_results.html
@@ -3,6 +3,10 @@
    Filter Results
 {%endblock%}
 {%block content%}
+
+
+
+<!--<hr style='border-top: 3px solid  rgb(41, 40, 40);width: 80%;'>>-->
 <html lang="en">
 
 <head>
@@ -14,7 +18,54 @@
 <body>
   <section id="portfolio" class="portfolio">
     <div class="container" style="margin-top: 50px;">
-    <br>
+      <h1 style="position: relative; padding-left: 20% ; padding-bottom: 5%; font-size: 25px; color: rgb(89, 86, 86);"> Filtered results for: {{input}} </h1>
+    
+
+    <div  id='search_bar' >
+      <form action="{%url 'search'%}" method='POST' enctype="multipart/form-data">
+      {% csrf_token %}
+      <div class='input-group'>
+        <div class="form-outline">
+      <input type="text"  id="form1" placeholder="Search...." name="search" class="form-control">
+      
+    </div>
+    <span class="icon-input-btn">
+  
+  <button type="submit" class="btn btn-primary"><i class="fa fa-search"></i> </button> 
+  
+  </span>
+  
+  </div>
+    </form>
+  </div>
+  
+      
+      <br>
+      <div id='filter_bar' class='form-group'>
+        <form action="{%url 'filters'%}" method='POST' enctype="multipart/form-data">
+        {% csrf_token %}
+        <div class='input-group'  style="width: 300px;">
+        
+        <select id='filter' class="form-control" name ='filter'>
+          <option value="drug"> Drug</option>
+          <option value="accessories"> Accessories</option>
+          <option value="medical_equipment">Medical equipment</option>
+        </select>
+        
+        
+  
+          <button type="submit" class="btn btn-primary" style="height: 40px;">
+            <label > Filter</label>
+            <svg xmlns="http://www.w3.org/2000/svg" width="19" height="19" fill="currentColor" class="bi bi-funnel-fill" viewBox="0 0 16 16">
+              <path d="M1.5 1.5A.5.5 0 0 1 2 1h12a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-.128.334L10 8.692V13.5a.5.5 0 0 1-.342.474l-3 1A.5.5 0 0 1 6 14.5V8.692L1.628 3.834A.5.5 0 0 1 1.5 3.5v-2z"/>
+            </svg>
+        </button> 
+          
+        
+      </div>
+      </form></div>
+
+    <!--
   <form action="{%url 'search'%}" method='POST' enctype="multipart/form-data">
     {% csrf_token %}
     <label for="search">Search</label>
@@ -24,7 +75,7 @@
 </div>
 <br>
  
-  <form action="{%url 'filters'%}" method='POST' enctype="multipart/form-data" style"margin-top: 50px;">
+  <form action="{%url 'filters'%}" method='POST' enctype="multipart/form-data" style="margin-top: 50px;">
     {% csrf_token %}
     <label for="filter">Filter products</label>
     <select id='filter' name ='filter'>
@@ -35,7 +86,7 @@
     
     <input type="submit" value="Enter">
   </form> 
-
+-->
   
 
   {% if filtered_result %}
