--- a/pharma_deal_django/templates/base.html
+++ b/pharma_deal_django/templates/base.html
@@ -12,6 +12,7 @@
         <!-- <link rel="stylesheet" type="text/css" href="{%static 'vendor/owl.carousel/assets/owl.carousel.min.css'%}"> -->
         <link rel="stylesheet" href="{%static 'vendor/fontawesome-free-5.12.0-web/fontawesome-free-5.12.0-web/css/fontawesome.min.css'%}">
         <link rel="stylesheet" href="{%static 'vendor/font-awesome-4.7.0/css/font-awesome.min.css'%}">
+        <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
         {% block extra %}{% endblock %}
     </head>
 <!--  heading jumbotron -->
