--- a/pharma_deal_django/templates/browse.html
+++ b/pharma_deal_django/templates/browse.html
@@ -50,7 +50,7 @@
           
 		
             <button type="submit" class="btn btn-primary" style="height: 40px;">
-              <label > Filter</label>
+               Filter
               <svg xmlns="http://www.w3.org/2000/svg" width="19" height="19" fill="currentColor" class="bi bi-funnel-fill" viewBox="0 0 16 16">
                 <path d="M1.5 1.5A.5.5 0 0 1 2 1h12a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-.128.334L10 8.692V13.5a.5.5 0 0 1-.342.474l-3 1A.5.5 0 0 1 6 14.5V8.692L1.628 3.834A.5.5 0 0 1 1.5 3.5v-2z"/>
               </svg>
@@ -65,7 +65,7 @@
             <div class="col-lg-4 col-md-6 filter-app wow fadeInUp">
               <div class="card my-2 mx-2" style="box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2)">
                 <a href="{% url 'single_product' product.product_id %}">
-                  <img "card-img-top" src="{{product.product_image}}" style="height:200px;">
+                  <img class="card-img-top" src="{{product.product_image}}" style="height:200px;">
                 </a>
                 <div class="card-body">
                   <p>Name: {{product.product_name}} </p>
@@ -77,7 +77,7 @@
                   <p>Price: {{product.price}} </p>
                   <p>Manufacturing date: {{product.manufacturing_date}} </p>
                   <p>Expiry date: {{product.expiry_date}}</p>
-                  <button class="btn btn-primary" form="Addtocart" type="submit"><i class="fa fa-cart-plus" aria-hidden="true"></i>  Add to cart</button>
+                  
                   <form action="{%url 'post_create'%}" method="POST" id="Addtocart">
                     {% csrf_token %} 
                     <input type="hidden" name="url" value="{{product.product_image}}">
@@ -85,6 +85,7 @@
                     <input type="hidden" name="distributor" value="{{product.user_id}}">
                     <input type="hidden" name="product_id" value="{{product.product_id}}">      
                     <input type="hidden" name="cost" value="{{product.price}}">
+                    <button class="btn btn-primary"  type="submit"><i class="fa fa-cart-plus" aria-hidden="true"></i>  Add to cart</button>
                   </form>
                 </div>        
               </div>
