--- a/pharma_deal_django/templates/rate_and_review.html
+++ b/pharma_deal_django/templates/rate_and_review.html
@@ -6,8 +6,106 @@
     <br>
     <br>
     <br>
+    <div style='position: relative;left: 40%;'>
     <p>name:{{product_name}}</p>
     <p>price:{{cost}}</p>
+
+    <style>
+        @import url(https://fonts.googleapis.com/css?family=Roboto:500,100,300,700,400);
+        div.stars{
+          width: 270px;
+          display: inline-block;
+        }
+         
+        input.star{
+          display: none;
+        }
+         
+        label.star {
+          float: right;
+          padding: 10px;
+          font-size: 36px;
+          color: #444;
+          transition: all .2s;
+        }
+         
+        input.star:checked ~ label.star:before {
+          content:'\f005';
+          color: #FD4;
+          transition: all .25s;
+        }
+         
+         
+        input.star-5:checked ~ label.star:before {
+          color:#FE7;
+          text-shadow: 0 0 20px #952;
+        }
+         
+        input.star-1:checked ~ label.star:before {
+          color: #F62;
+        }
+         
+        label.star:hover{
+          transform: rotate(-15deg) scale(1.3);
+        }
+         
+        label.star:before{
+          content:'\f006';
+          font-family: FontAwesome;
+        }
+         
+        .rev-box{
+          overflow: hidden;
+          height: 0;
+          width: 100%;
+          transition: all .25s;
+        }
+         
+        textarea.review{
+          background: #222;
+          border: none;
+          width: 100%;
+          max-width: 100%;
+          height: 100px;
+          padding: 10px;
+          box-sizing: border-box;
+          color: #EEE;
+        }
+         
+        label.review{
+          display: block;
+          transition:opacity .25s;
+        }
+         
+        input.star:checked ~ .rev-box{
+          height: 125px;
+          overflow: visible;
+        }
+        </style>
+
+    <div class="stars">
+        <form action="{%url 'review_and_rate'%}" method='POST'>
+            {% csrf_token %}
+         <input type="hidden" name="pharma_id" value="{{pharma_id}}">
+        <input type="hidden" name="transaction_status" value="{{status}}">
+        <input type="hidden" name="product_id" value="{{product_id}}">
+
+          <input class="star star-5" id="star-5" type="radio" name='rating' value="5"/>
+          <label class="star star-5" for="star-5"></label>
+          <input class="star star-4" id="star-4" type="radio" name='rating' value="4"/>
+          <label class="star star-4" for="star-4"></label>
+          <input class="star star-3" id="star-3" type="radio" name='rating' value="3"/>
+          <label class="star star-3" for="star-3"></label>
+          <input class="star star-2" id="star-2" type="radio" name='rating' value="2"/>
+          <label class="star star-2" for="star-2"></label>
+          <input class="star star-1" id="star-1" type="radio" name='rating' value="1"/>
+          <label class="star star-1" for="star-1"></label>
+          <input type="text" style='height:80px;width:280px;align-content: center;' name="review_and_rate">
+          <input type="submit" name="submit" value="Review">
+        </form>
+        </div>
+    </div>
+    <!--
     <form action="{%url 'review_and_rate'%}" method='POST'>
         {% csrf_token %}
         <input type="hidden" name="pharma_id" value="{{pharma_id}}">
@@ -28,5 +126,5 @@
         <label for='rate_5'>5</label>
         
         <input type="submit" name="submit" value="Enter">
-    </form>
+    </form>-->
 {%endblock%}
